// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: EmptyModal mode: empty 1`] = `
<div>
  <div
    class="text-center"
  >
    <div
      class="content-state empty"
    >
      <div
        class="state-icons"
      >
        <i
          class="icon material-icons"
        >
          add
        </i>
        <i
          class="icon material-icons"
        >
          contrast
        </i>
        <i
          class="icon material-icons"
        >
          photo
        </i>
        <i
          class="icon material-icons"
        >
          folder_open
        </i>
        <i
          class="icon material-icons"
        >
          radio_button_unchecked
        </i>
        <i
          class="icon material-icons"
        >
          bolt
        </i>
      </div>
      <div
        class="state-content"
      >
        <i
          class="icon material-icons"
        >
          laptop
        </i>
      </div>
    </div>
    <span
      class="d-block fs-4"
    >
      Empty
    </span>
    <span
      class="d-block fs-6 text-dark mb-3"
    >
      There is nothing here yet, the collection is empty.
    </span>
  </div>
</div>
`;

exports[`Component: EmptyModal mode: no-results 1`] = `
<div>
  <div
    class="text-center"
  >
    <div
      class="content-state no-results"
    >
      <div
        class="state-icons"
      >
        <i
          class="icon material-icons"
        >
          add
        </i>
        <i
          class="icon material-icons"
        >
          contrast
        </i>
        <i
          class="icon material-icons"
        >
          photo
        </i>
        <i
          class="icon material-icons"
        >
          folder_open
        </i>
        <i
          class="icon material-icons"
        >
          radio_button_unchecked
        </i>
        <i
          class="icon material-icons"
        >
          bolt
        </i>
      </div>
      <div
        class="state-content"
      >
        <i
          class="icon material-icons"
        >
          search
        </i>
      </div>
    </div>
    <span
      class="d-block fs-4"
    >
      Empty
    </span>
    <span
      class="d-block fs-6 text-dark mb-3"
    >
      No results were found please try again with a different query.
    </span>
  </div>
</div>
`;
